# django-next-fs

./: README.md  manage.py  pyproject.toml
frontend/: package-lock.json
frontend/src/app/: layout.js  page.js  style.css
frontend/src/app/add/: page.js
menu/: models.py  routers.py  serializers.py  viewsets.py
menu_core/: asgi.py  settings.py  urls.py  wsgi.py
